SPE-126: Fix - Global - Spectra right panel shaky moment due to scrollbar issue (#3907)
* resolved shaky moment issue in spectra side panel

* updated changelog

---------

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -672,7 +672,6 @@ button.components-button.uagb-review-select-btn.is-secondary {
 }
 
 .edit-post-layout .interface-interface-skeleton__sidebar { // Resolved an issue of margin added by spectra for the sidebar causing background color visible in site editor https://d.pr/i/PRlLIf.
-	overflow-y: overlay;
 	margin-bottom: 10px;
 	overflow-x: hidden;
 
